// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table valueEnum ListToolBar action is empty array 1`] = `
<DocumentFragment>
  <div
    class="ant-pro-table-list-toolbar"
  >
    <div
      class="ant-pro-table-list-toolbar-container"
    >
      <div
        class="ant-pro-table-list-toolbar-left"
      />
      <div
        class="ant-pro-table-list-toolbar-right"
        style="align-items: center;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Table valueEnum ListToolBar action no array 1`] = `
<DocumentFragment>
  <div
    class="ant-pro-table-list-toolbar"
  >
    <div
      class="ant-pro-table-list-toolbar-container"
    >
      <div
        class="ant-pro-table-list-toolbar-left"
      />
      <div
        class="ant-pro-table-list-toolbar-right"
        style="align-items: center;"
      >
        <button
          class="ant-btn ant-btn-primary"
          type="button"
        >
          <span>
            添 加
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Table valueEnum ListToolBar action no jsx 1`] = `
<DocumentFragment>
  <div
    class="ant-pro-table-list-toolbar"
  >
    <div
      class="ant-pro-table-list-toolbar-container"
    >
      <div
        class="ant-pro-table-list-toolbar-left"
      />
      <div
        class="ant-pro-table-list-toolbar-right"
        style="align-items: center;"
      >
        <div
          style="display: flex; align-items: center; gap: 8px;"
        >
          <button
            class="ant-btn ant-btn-primary"
            type="button"
          >
            <span>
              添 加
            </span>
          </button>
          shuaxin
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
